# game-controller

./: .gitignore  README.md
bags/: control.bag  control_loop.bag
src/game_master/: CMakeLists.txt  package.xml  test.py
src/game_master/scripts/: autonomous_controller.py  camera_view.py  drone.py  drone_controller.py  drone_msg_relay.py  flight_capture.py  flight_vision.py  keyboard.py  manual_controller.py  measurement.py  notes.md  object_detector.py  rossocket_client.py  rossocket_relay.py  slam.py  socket_client.py  socket_listener.py  target_tracker.py  vision.py
