<?xml version="1.0"?>
<package format="2">
  <name>game_master</name>
  <version>0.0.0</version>
  <description>As part of the search and rescue project, game_master developed to control a parot bebop drone for indoor navigation and search for the accident site and report back the locaition to the ground robot.</description>

  <maintainer email="ss2665@york.ac.uk">Shah-nawaj Shuhan</maintainer>

  <license>LGPLv3</license>

  <url type="repository">https://github.com/shuhan/game-controller</url>
  <url type="bugtracker">https://github.com/shuhan/game-controller/issues</url>

  <author email="ss2665@york.ac.uk">Shah-nawaj Shuhan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bebop_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>bebop_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>bebop_msgs</exec_depend>

  <export>

  </export>
</package>
